Latest coded with updated features

--- a/qrcode.html
+++ b/qrcode.html
@@ -62,7 +62,7 @@
             document.getElementById("qrcode").innerHTML = "";
 
             
-            var webxrURL = "https://d5d7-2a09-bac1-36c0-80-00-ca-14f.ngrok-free.app"
+            var webxrURL = "https://3c6e-123-63-2-2.ngrok-free.app"
             
             new QRCode(document.getElementById("qrcode"), {
                 text: webxrURL,
