--- a/qrcode.html
+++ b/qrcode.html
@@ -62,7 +62,7 @@
             document.getElementById("qrcode").innerHTML = "";
 
             
-            var webxrURL = "https://3c6e-123-63-2-2.ngrok-free.app"
+            var webxrURL = "https://4222-117-193-77-254.ngrok-free.app"
             
             new QRCode(document.getElementById("qrcode"), {
                 text: webxrURL,
